ros_embedded/log/build_2023-06-03_19-05-38/serial_rw/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/pi/ros_embedded/install/serial_rw/lib/python3.10/site-packages/serial_rw/serial_rw.py", line 21
    print('reading: "%s"' % line.stdout.decode('UTF8').strip().split('/n')
         ^
SyntaxError: '(' was never closed

